--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Molly's site</title>
   <link href="favicon.ico?v=2" rel="icon">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="./CSS/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Kanit:wght@700&family=Major+Mono+Display&family=Roboto:wght@700&display=swap" rel="stylesheet">
